fix spacing of sections across all screens, adjust color scheme to white + rotate text in project section allowing space for img

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -645,11 +645,11 @@ video {
 }
 
 ::-webkit-scrollbar-track {
-  background: #171b24;
+  background: #e6e8ee;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #004e73;
+  background: #e6e8ee;
   border-radius: 6px;
   border: 1px solid #171b24;
 }
@@ -676,6 +676,7 @@ video {
   font-size: 1.25rem;
   font-weight: 700;
   text-transform: uppercase;
+  max-width: 15rem;
 }
 
 .bg-custom-grad {
@@ -759,7 +760,23 @@ video {
 	transition: max-height 500ms ease-out;
 } */
 
+.text-direction-vert {
+  transform-origin: 0 0;
+  transform: rotate(0deg);
+}
+
+.top-250 {
+  top: 250px;
+}
+
 /* MEDIA QUERIES */
+
+@media (min-width: 768px) {
+  .text-direction-vert {
+    transform-origin: 0 0;
+    transform: rotate(270deg);
+  }
+}
 
 .space-y-0 > :not(template) ~ :not(template){
   --space-y-reverse: 0;
